--- a/2.html
+++ b/2.html
@@ -29,14 +29,21 @@
         <div class="main">
             <h1>Upload and Win!</h1>
             <div class="display">
-                <div class="sideimage"></div>
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+                <div class="four"></div>
                 <div class="progress">
-                    <h6>Drag your photos here</h6><br>
-                    <p><i class="fas fa-upload"></i></p>
+                    <h6>Drag your photos here</h6>
+                    <br>
+                    <p>
+                        <i class="fas fa-upload"></i>
+                    </p>
                 </div>
             </div>
+            <h2>Submit 5 most amazing pictures youv’e clicked of the most happening places you visited.</h2>
             <div class="cancel">
-                <button class="btn">Cancel</button>
+                <button class="btn">Know More Details</button>
             </div>
         </div>
         <div class="footer row">
