--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="win">
                     <h1 class="">Here's a chance to win</h1>
                 </div>
-                <div class="middle row">
+                <div class="middle">
                     <div class="display">
                         <h1>Simply upload the picture of places you love to visit</h1>
                     </div>
