--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 
     <link rel="stylesheet" href="css/index.css">
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-storage.js"></script>
+    <script src="js/firebase.js"></script>
+    <script src="js/index.js"></script>
+
 </head>
 
 <body>
@@ -42,7 +55,13 @@
                     <h1 class="amount">$100</h1>
                 </div>
                 <div class="login">
-                    <button class="btn"><span class="facebook"><i class="fab fa-facebook-f"></i>&nbsp;	&nbsp;	Login with Facebook</span><span class="arrow"><i class="fas fa-arrow-right"></i></span></button>
+                    <button class="btn">
+                        <span class="facebook" onclick="login()">
+                            <i class="fab fa-facebook-f"></i>&nbsp; &nbsp; Login with Facebook</span>
+                        <span class="arrow">
+                            <i class="fas fa-arrow-right"></i>
+                        </span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -53,8 +72,6 @@
     </div>
 
     <!-- bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
